# sscm-reader

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  sscm_reader.py
src/sscm_reader/: __init__.py
